# git-gui

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  git-gui.desktop  notes.md  vcpkg.json
src/: CMakeLists.txt  bottom_bar.cpp  bottom_bar.h  draw.cpp  draw.h  git-gui.cpp  git.cpp  git.h  git_gui.cpp  imgui_spectrum.h  initialization.cpp  initialization.h  load_texture_from_file.cpp  load_texture_from_file.h  main.cpp  my_git.cpp  mygit.cpp  mygit.h  notes.cpp  themes.cpp  themes.h  video_player.cpp  video_player.h
src/glad/include/glad/: gl.h
src/glad/src/: gl.c
